Minot style spacing fixes

--- a/scss/ueb-node.scss
+++ b/scss/ueb-node.scss
@@ -156,12 +156,9 @@ ueb-node[data-pure-function="true"] .ueb-node-name-symbol {
     padding-left: 8px;
 }
 
-.ueb-node-has-inputs .ueb-node-inputs {
-    margin-right: 30px;
-}
-
 .ueb-node-outputs {
     margin-left: auto;
+    padding-left: 16px;
     padding-right: 10px;
 }
 
