--- a/scss/ueb-pin.scss
+++ b/scss/ueb-pin.scss
@@ -77,7 +77,7 @@ ueb-blueprint[data-scrolling="false"][data-selecting="false"] .ueb-pin-wrapper:h
 }
 
 .ueb-node-outputs .ueb-pin-icon {
-    margin-left: 4px;
+    margin-left: 2px;
 }
 
 ueb-node.ueb-node-style-minimal .ueb-pin-wrapper,
